# pde-agent-bench

./: .gitignore  AGENT_TASK.md  DEALII_GUIDE.md  DOLFINX_GUIDE.md  EXPERIMENTS_GUIDE.md  README.md  REBUTTAL_README.md  benchmark_report.json  pyproject.toml  task.md
artifacts_bench/heat_grid_target/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/heat_longer/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/heat_p2/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/heat_quad/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/heat_simple/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/poisson_grid_target/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/poisson_p2/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/poisson_quad/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  reference.npz  solution.npz
artifacts_bench/poisson_simple/: exact.npz  generate_meta.json  meta.json  metrics.json  problem_info.json  (+2 more)
data/: benchmark.jsonl  benchmark_biharm.jsonl  benchmark_burger.jsonl  benchmark_expansion.jsonl  benchmark_helm.jsonl  benchmark_le.jsonl  benchmark_rd.jsonl  benchmark_stokes.jsonl  benchmark_v1.jsonl  benchmark_v2.jsonl  benchmark_wave.jsonl  croissant_rai_PDEAgentBench.json  metadata.json  navier-stokes_expansion.jsonl
docker/: Dockerfile.dealii  Dockerfile.firedrake  build_images.sh
docs/: index.html
experiments/: minisweagent.sh
pdebench/: __main__.py  cli.py
pdebench.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
scripts/: benchmark_score.py  compare_results.py  evaluate_agent.py  make_demo_cases.py  run_benchmark.py  test_oracle_cases.py
web/: README.md
(+885 files in other folders)
